[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Non_Stationary_Learning"
version = "0.1.0"
description = "Non Stationary Learning"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "torch==2.9.1",
    "numpy==2.3.5",
    "wandb==0.23.1",
    "gymnasium==1.2.2",
    "pyyaml==6.0.3",
    "omegaconf==2.3.0",
    "tqdm==4.66.3",
    "datasets>=4.4.1",
    "huggingface_hub>=1.2.1",
    "multiprocess>=0.70.18",
    "pillow",
    "transformers>=5.0.0",
    "bitsandbytes>=0.43.0",
    "peft>=0.10.0",
    "accelerate",
    "tensordict",
    "ns_gym @ git+https://github.com/scope-lab-vu/ns_gym",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
]

[project.scripts]
run = "scripts.run:main"

[tool.setuptools]
packages = ["src", "scripts"]