[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stream_buffer"
version = "0.1.0"
description = "Token stream storage backed by memory-mapped numpy buffers with HuggingFace Dataset I/O"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "numpy>=2.0",
    "datasets>=4.4.1",
    "huggingface_hub>=1.2.1",
    "multiprocess>=0.70.18",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "torch",
]

[tool.setuptools]
packages = ["src"]
